--- a/VisualStatistics/HTML/EN/plugins/VisualStatistics/html/list.html
+++ b/VisualStatistics/HTML/EN/plugins/VisualStatistics/html/list.html
@@ -3,12 +3,12 @@
 [%- pwd_list = BLOCK -%]
 	<a href="[% webroot %]index.html?player=[% player | uri %]">
 		[% "HOMEMENU" | string %]
-	</a> >
+	</a> [% IF systemSkin == 'Classic' %]/[% ELSE %]>[% END %]
 		[% "PLUGIN_VISUALSTATISTICS" | string %]
 [% END -%]
 [% PROCESS pageheader.html %]
 <style>
-[% IF systemSkin == "material" || systemSkin == "DarkDefault" || systemSkin == "TransparentDark" %]
+[% IF systemSkin == "material" || systemSkin == "DarkDefault" %]
 .updatebutton {font-size: 12px !important;}
 .info-circle {stroke: rgb(240, 240, 240);}
 .info-i {fill: rgb(240, 240, 240);}
@@ -17,7 +17,7 @@
 .info-circle {stroke: rgb(0, 0, 0);}
 .info-i {fill: rgb(0, 0, 0);}
 [% END %]
-[% IF systemSkin == "Default" || systemSkin == "DarkDefault" || systemSkin == "TransparentDark" %]
+[% IF systemSkin == "Default" || systemSkin == "DarkDefault" %]
 .pagetitle {padding-top: 6px;}
 #headerSearch {padding-top: 3px;}
 [% END %]
@@ -27,7 +27,7 @@
 	var colorSchemeLight = false;
 [% ELSE %]
 	if(top != self) top.location.replace(location);
-	[% IF systemSkin == "DarkDefault" || systemSkin == "TransparentDark" %]
+	[% IF systemSkin == "DarkDefault" %]
 		var colorSchemeLight = false;
 	[% ELSE %]
 		var colorSchemeLight = true;
@@ -1268,7 +1268,7 @@
 </script>
 <script type="text/javascript" src="js/showchart.min.js"></script>
 <script type="text/javascript">
-	[% IF systemSkin == "material" || systemSkin == "DarkDefault" || systemSkin == "TransparentDark" %]
+	[% IF systemSkin == "material" || systemSkin == "DarkDefault" %]
 		document.getElementById('colorscheme_value').innerHTML = '[% "PLUGIN_VISUALSTATISTICS_CHARTSCOLORSCHEME_DARK" | string %]';
 		var toggle = document.getElementById('toggleswitch_colorscheme');
 		toggle.checked = !toggle.checked;
