--- a/VisualStatistics/HTML/EN/plugins/VisualStatistics/html/list.html
+++ b/VisualStatistics/HTML/EN/plugins/VisualStatistics/html/list.html
@@ -17,7 +17,7 @@
 .info-circle {stroke: rgb(0, 0, 0);}
 .info-i {fill: rgb(0, 0, 0);}
 [% END %]
-[% IF systemSkin == "Default" || systemSkin == "DarkDefault" %]
+[% IF systemSkin == "Default" || systemSkin == "Logic" || systemSkin == "DarkDefault" %]
 .pagetitle {padding-top: 6px;}
 #headerSearch {padding-top: 3px;}
 [% END %]
